[workspace]
members = [
  "libtdengine",
]
[package]
authors = ["Huo Linhe <linhehuo@gmail.com>"]
edition = "2018"
name = "bailongma"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
anyhow = "1.0.40"
bytes = "*"
clap = "3.0.0-beta.2"
env_logger = "*"
fnv = "1"
futures = "0.3.13"
itertools = "0.10"
libtdengine = {path = "./libtdengine", features = ["r2d2", "rest"]}
log = "*"
lru = "0.6.5"
md-5 = "0.9.1"
prost = "0.7"
prost-types = "0.7"
r2d2 = "0.8"
snap = "1"
fern = "0.6"
[build-dependencies]
anyhow = "1.0.40"
prost-build = "0.7"

[dev-dependencies]
hex-literal = "0.3"
