[package]
name = "bailongma"
version = "0.1.1-alpha.0"
authors = ["Huo Linhe <linhehuo@gmail.com>"]
categories = ["command-line-utilities"]
description = """
Official Prometheus Remote Storage Adapter for TDengine
"""
edition = "2018"

homepage = "https://taosdata.com/"
keywords = ["TDengine", "prometheus", "remote", "blm"]
license = "AGPL-1.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-web = "4.0.0-beta.6"
anyhow = {version = "1.0.40", features = ["backtrace"]}
bytes = "1.0"
clap = "3.0.0-beta.2"
dashmap = "4"
env_logger = "0.8.3"
fern = "0.6"
futures = "0.3.13"
itertools = "0.10"
libtaos = {version = "0.2.3", features = ["r2d2"]}
log = "0.4.14"
lru = "0.6.5"
md-5 = "0.9.1"
names = "0.11"
prost = "0.7"
prost-types = "0.7"
psutil = {version = "3.2.0", default-features = false, features = ["cpu", "process"]}
r2d2 = "0.8"
rayon = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
snailquote = "0.3.0"
snap = "1"
sysinfo = "0.17.2"
tempfile = "3"
thiserror = "1.0.24"
tokio = {version = "1.5.0", features = ["rt", "macros", "rt-multi-thread", "time"]}
[build-dependencies]
anyhow = "1.0.40"
prost-build = "0.7"

[dev-dependencies]
hex-literal = "0.3"

[features]
default = []
rest = ["libtaos/rest"]
